package ua.bot.structure.facade;

/**
 * SubsystemA represents one part of a complex subsystem.
 * This class performs specialized operations related to its domain.
 */
public class SubsystemA {
    
    /**
     * Performs an operation specific to SubsystemA.
     * In a real application, this would contain complex logic.
     */
    public void operationA() {
        System.out.println("SubsystemA: Performing operation A");
        // Complex operation details would go here
    }
    
    /**
     * Initializes SubsystemA with necessary setup.
     */
    public void initialize() {
        System.out.println("SubsystemA: Initializing");
        // Initialization logic would go here
    }
    
    /**
     * Performs cleanup operations for SubsystemA.
     */
    public void shutdown() {
        System.out.println("SubsystemA: Shutting down");
        // Cleanup logic would go here
    }
}
