package ua.bot.structure.facade;

/**
 * SubsystemC represents a third part of the complex subsystem.
 * This class handles different aspects of the system than SubsystemA and SubsystemB.
 */
public class SubsystemC {
    
    /**
     * Performs an operation specific to SubsystemC.
     * In a real application, this would contain complex logic.
     */
    public void operationC() {
        System.out.println("SubsystemC: Performing operation C");
        // Complex operation details would go here
    }
    
    /**
     * Validates results from other subsystems.
     * 
     * @param result the result to validate
     * @return whether the result is valid
     */
    public boolean validateResult(String result) {
        System.out.println("SubsystemC: Validating result - " + result);
        // Validation logic would go here
        return true;
    }
    
    /**
     * Finalizes the process and creates a final report.
     * 
     * @return the final report
     */
    public String generateReport() {
        System.out.println("SubsystemC: Generating final report");
        // Report generation logic would go here
        return "Final Report";
    }
}
